--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -21,10 +21,13 @@
   }
 
   &__title {
+	font-family: 'Chelsea Market', cursive;
+	text-shadow: 2px 2px 0 rgba(0, 0, 0, .4);
     font-weight: 300;
-    color: $mainBlue;
+    color: #fff;
     margin: 0;
-    font-size: 2.4rem;
+    font-size: 2rem;
+	opacity:.8;
   
     @mixin atSmall {
       font-size: 4.8rem;
@@ -33,9 +36,10 @@
   }
 
   &__subtitle {
-    font-weight: 300;
-    color: $mainBlue;
-    font-size: 1.5rem;
+    font-weight: 500;
+    color: $mainOrange;
+    font-size: 1.8rem;
+	text-shadow: 2px 2px 0 rgba(0, 0, 0, .4);
     margin: 0;
 
     @mixin atSmall {
